back to llm generated sample flights

--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.ai.bedrock.converse.chat.options.model=us.amazon.nova-2-lite-v1:0
 spring.ai.bedrock.converse.chat.options.max-tokens=10000
 spring.ai.mcp.client.streamable-http.connections.flights.url=${flights-mcp.url:http://localhost:8081}
 spring.main.web-application-type=none
+logging.level.org.springframework.ai.bedrock.converse=OFF
