--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.ai.mcp.server.type=sync
 server.shutdown=immediate
 server.port=${PORT:8081}
 
+spring.ai.bedrock.aws.profile=${AWS_PROFILE:}
 spring.ai.bedrock.converse.chat.options.model=us.amazon.nova-pro-v1:0
 spring.ai.bedrock.converse.chat.options.max-tokens=10000
 spring.ai.mcp.server.request-timeout=60s
