adding infra setup

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,23 @@ out/
 
 ### Kotlin ###
 .kotlin
-/infra/cdk.out/
-/infra/.venv/
-/infra/__pycache__/
+
+### CDK ###
+cdk.out/
+*.cdk.staging/
+
+### Python ###
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.venv/
+venv/
+ENV/
+.env
+*.egg-info/
+.eggs/
+dist/
+build/
+*.egg
