--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,25 @@
-spring.ai.mcp.server.protocol=streamable
-spring.ai.mcp.server.type=sync
-server.shutdown=immediate
-server.port=${PORT:8081}
+# MCP Server Configuration
+# Using STREAMABLE mode with session support
+spring.ai.mcp.server.protocol=STREAMABLE
+spring.ai.mcp.server.type=SYNC
+spring.ai.mcp.server.request-timeout=60s
 
-spring.ai.bedrock.aws.profile=${AWS_PROFILE:}
+# Enable annotation scanner for @McpTool discovery
+spring.ai.mcp.server.annotation-scanner.enabled=true
+
+# Enable debug logging for troubleshooting
+logging.level.org.springframework.ai.mcp=DEBUG
+logging.level.io.modelcontextprotocol=DEBUG
+
+# Server Configuration
+# AgentCore expects MCP servers on port 8000, local dev uses 8081
+server.port=${PORT:8081}
+server.shutdown=immediate
+server.address=0.0.0.0
+
+# AWS Bedrock Configuration
+# In AgentCore, credentials are provided via IAM role (default credential chain)
+# For local dev, set AWS_PROFILE environment variable
+spring.ai.bedrock.aws.region=${AWS_REGION:us-west-2}
 spring.ai.bedrock.converse.chat.options.model=us.amazon.nova-pro-v1:0
 spring.ai.bedrock.converse.chat.options.max-tokens=10000
-spring.ai.mcp.server.request-timeout=60s
