--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -1,6 +1,19 @@
 spring.ai.bedrock.aws.profile=${AWS_PROFILE:}
+spring.ai.bedrock.aws.region=${AWS_REGION:us-west-2}
 spring.ai.bedrock.converse.chat.options.model=us.amazon.nova-2-lite-v1:0
 spring.ai.bedrock.converse.chat.options.max-tokens=10000
-spring.ai.mcp.client.streamable-http.connections.flights.url=${flights-mcp.url:http://localhost:8081}
+
+# MCP Client Configuration
+# For local: http://localhost:8081
+# For AgentCore: https://bedrock-agentcore.us-west-2.amazonaws.com/runtimes/{encoded-arn}/invocations?qualifier=DEFAULT
+spring.ai.mcp.client.streamable-http.connections.flights.url=${FLIGHTS_MCP_URL:http://localhost:8081}
+
+# AgentCore Authentication (Cognito)
+agentcore.cognito.client-id=${COGNITO_CLIENT_ID:}
+agentcore.cognito.username=${COGNITO_USERNAME:testuser}
+agentcore.cognito.password=${COGNITO_PASSWORD:TestPass123!}
+agentcore.cognito.region=${AWS_REGION:us-west-2}
+
 spring.main.web-application-type=none
 logging.level.org.springframework.ai.bedrock.converse=OFF
+logging.level.org.springframework.ai.mcp=DEBUG
